--- a/module/Friend/view/friend/friend/wall.phtml
+++ b/module/Friend/view/friend/friend/wall.phtml
@@ -57,59 +57,62 @@
 						
 					}
 				echo '</h1>';
+				
+		
+				if($user["friendship"] != 1) {
+					echo '<div class="alertblock"><img src="../img/lock.png" /><span>Vous ne pouvez pas voir les flicks de @'.$user['nickname'].'</span></div>';
+				}
+				else if(count($flicks) == 0) {
+					echo '<div class="alertblock"><img src="../img/ship.png" /><span>@'.$user['nickname'].' n\'a pas encore publié de flicks.</span></div>';
+				}
+				?>
+				<?php foreach ($flicks as $flick) : ?>
+
+				<div class="tile <?php if($currentUserId == $flick["owner"]) echo "tile-mine"; ?> panel panel-default">
+					<div class="panel-body">
+
+						<div class="tile-title">
+							<b><?php echo $this->escapeHtml($flick["name"]);?> <a href="<?php echo $this->url('user', array('action'=>'index', 'id' => $flick["nickname"]));?>" >@<?php echo $this->escapeHtml($flick["nickname"]);?></a></b>
+							<div class="tile-mark">
+								<?php
+								for($i=1; $i <= 5; $i++){
+									if($i <= $flick["mark"])
+										echo "<div class=\"glyphicon glyphicon-star\"></div>";
+									else
+										echo "<div class=\"glyphicon glyphicon-star-empty\"></div>";
+								}
+								?>
+								<div class="tile-control">
+									<a class="btn btn-primary btn-sm" href="<?php echo $this->url('flick', array('action'=>'edit', 'id' => $flick["id"]));?>" role="button">
+										 <span class="glyphicon glyphicon glyphicon-edit" aria-hidden="true"></span>
+									</a>
+									<a class="btn btn-danger btn-sm" href="<?php echo $this->url('flick', array('action'=>'delete', 'id' => $flick["id"]));?>" role="button">
+										 <span class="glyphicon glyphicon glyphicon-remove" aria-hidden="true"></span>
+									</a>
+								</div>
+							</div>
+
+						</div>
+						<div class="tile-comment"><?php echo $this->escapeHtml($flick["comment"]);?></div>				
+						<img style="width:100%;" src="../assets/<?php echo $this->escapeHtml($flick["fileupload"]);?>" class="img-responsive" alt="Responsive image" />
+						<?php echo !is_null($flick["address"]) ? '<div class="tile-address"><span class="glyphicon glyphicon-map-marker" aria-hidden="true"></span>À ' . $this->escapeHtml($flick["address"]).'</div>' : "";?>
+
+
+						
+					</div>
+				</div>
+				  
+				<?php endforeach;
+				
 			}
 			else {
-				
-				echo '<h1>Cet utilisateur n\'existe pas ou plus.</h1>';
+				echo "<h1>Désolé...</h1>";
+				echo '<div class="alertblock"><img src="../img/user.png" /><span>Cet utilisateur n\'existe pas ou plus.</span></div>';
 			}
 ?>
 			
 
-		<?php
-		if($user["friendship"] != 1) {
-			echo '<table class="table"><tr><td>Vous ne pouvez pas voir les flicks de @'.$user['nickname'].'</td></tr></table>';
-		}
-		else if(count($flicks) == 0) {
-			echo '<table class="table"><tr><td>@'.$user['nickname'].' n\'a pas encore publié de flicks.</td></tr></table>';
-		}
-		?>
-		<?php foreach ($flicks as $flick) : ?>
 
-		<div class="tile <?php if($currentUserId == $flick["owner"]) echo "tile-mine"; ?> panel panel-default">
-			<div class="panel-body">
-
-				<div class="tile-title">
-					<b><?php echo $this->escapeHtml($flick["name"]);?> <a href="<?php echo $this->url('user', array('action'=>'index', 'id' => $flick["nickname"]));?>" >@<?php echo $this->escapeHtml($flick["nickname"]);?></a></b>
-					<div class="tile-mark">
-						<?php
-						for($i=1; $i <= 5; $i++){
-							if($i <= $flick["mark"])
-								echo "<div class=\"glyphicon glyphicon-star\"></div>";
-							else
-								echo "<div class=\"glyphicon glyphicon-star-empty\"></div>";
-						}
-						?>
-						<div class="tile-control">
-							<a class="btn btn-primary btn-sm" href="<?php echo $this->url('flick', array('action'=>'edit', 'id' => $flick["id"]));?>" role="button">
-								 <span class="glyphicon glyphicon glyphicon-edit" aria-hidden="true"></span>
-							</a>
-							<a class="btn btn-danger btn-sm" href="<?php echo $this->url('flick', array('action'=>'delete', 'id' => $flick["id"]));?>" role="button">
-								 <span class="glyphicon glyphicon glyphicon-remove" aria-hidden="true"></span>
-							</a>
-						</div>
-					</div>
-
-				</div>
-				<div class="tile-comment"><?php echo $this->escapeHtml($flick["comment"]);?></div>				
-				<img style="width:100%;" src="../assets/<?php echo $this->escapeHtml($flick["fileupload"]);?>" class="img-responsive" alt="Responsive image" />
-				<?php echo !is_null($flick["address"]) ? '<div class="tile-address"><span class="glyphicon glyphicon-map-marker" aria-hidden="true"></span>À ' . $this->escapeHtml($flick["address"]).'</div>' : "";?>
-
-
-				
-			</div>
-		</div>
-		  
-		<?php endforeach; ?>
 		
 	</div>
 	<div class="col-md-3">
