--- a/public/css/style.css
+++ b/public/css/style.css
@@ -275,3 +275,26 @@ footer {
 	
 }
 
+.alertblock {
+	
+	border-top: 1px solid #ddd;
+	text-align:center;
+	width:100%;
+	padding-bottom:50px;
+}
+
+.alertblock img {
+	
+	width:128px;
+	height:128px;
+	margin:30px 0 10px;
+}
+
+.alertblock span {
+	
+	display:block;
+	font-size:24px;
+	margin:10px 0;
+	
+}
+
