--- a/module/Flick/view/flick/flick/me.phtml
+++ b/module/Flick/view/flick/flick/me.phtml
@@ -21,7 +21,7 @@
 	<div class="col-md-7">
 	
 		 <h1>
-			Vos <?php echo count($flicks); ?> flicks
+			Vos flicks (<?php echo count($flicks); ?>)
 			<a class="btn btn-primary" style="float:right;" role="button" href="<?php echo $this->url('flick', array('action'=>'add'));?>">Ajouter un flick</a>
 		</h1>
 		<?php
